Minor fixes to Match, added ENDED to GameStatus, deleted InvalidPointsPatternException